--- a/Profile-Cart/style.css
+++ b/Profile-Cart/style.css
@@ -43,6 +43,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #3333;
 }
 .text-data .name{
     font-size: 22px;
