--- a/Profile-Cart/style.css
+++ b/Profile-Cart/style.css
@@ -43,7 +43,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    color: #3333;
+    color: #333;
 }
 .text-data .name{
     font-size: 22px;
@@ -52,4 +52,42 @@ body{
 .text-data .job{
     font-size: 15px;
     font-weight: 400;
+}
+.profile-card .media-buttons{
+    display: flex;
+    align-items: center;
+    margin: 15px;
+}
+.media-buttons .link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    font-size: 18px;
+    height: 34px;
+    width: 34px;
+    border-radius: 50%;
+    margin: 0 8px;
+    background-color: #4070f4;
+    text-decoration: none;
+}
+.profile-card .buttons{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+.buttons .button{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
+    border: none;
+    border-radius: 24px;
+    margin: 0 10px;
+    padding: 8px 24px;
+    background-color: #4070f4;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+.buttons .button:hover{
+    background-color: #0e4bf1;
 }
