--- a/Profile-Cart/style.css
+++ b/Profile-Cart/style.css
@@ -16,12 +16,23 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 370%;
+    max-width: 370px;
     width: 100%;
     background: #fff;
     border-radius: 24px;
     padding: 25px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+    position: relative;
+}
+.profile-card::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 36%;
+    width: 100%;
+    border-radius: 24px 24px 0 0;
+    background-color: #4070f4;
 }
 .image{
     position: relative;
@@ -74,7 +85,7 @@ body{
 .profile-card .buttons{
     display: flex;
     align-items: center;
-    margin-top: 25px;
+    margin-top: 15px;
 }
 .buttons .button{
     color: #fff;
@@ -90,4 +101,23 @@ body{
 }
 .buttons .button:hover{
     background-color: #0e4bf1;
+}
+.profile-card .analytics{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+}
+.analytics .data{
+    display: flex;
+    align-items: center;
+    color: #333;
+    padding: 0px 20px;
+    border-right: 2px solid #e7e7e7;
+}
+.data i {
+    font-size: 18px;
+    margin-right: 6px;
+}
+.data:list-child{
+    border-radius: none;
 }
